<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Notificator</string>

    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>

    <string name="preference_file_key">notificator_storage</string>

    <string name="phone_number">Номер телефона</string>
    <string name="log_in">Войти</string>
    <string name="log_out">Выйти</string>
    <string name="new_message">Новое сообщение</string>
    <string name="send_message">Отправить сообщение</string>
    <string name="time_of_arrival">Опаздаю на</string>
    <string name="send_message_button">Отправить</string>
    <string name="message_type">Тип сообщения</string>
    <string name="message_template">Шаблоны</string>
    <string name="set_timer_settings">Установить таймер</string>
    <string name="notify_settings">Настройки оповещений</string>
    <string name="password">Пароль</string>
    <string name="set_penetration_signal">Звуковой сигнал через беззвучный режим</string>
    <string name="message">Сообщение</string>
    <string name="settings">Настройки</string>
    <string name="sending">Отправлено</string>
    <string name="set_notify_timer">Установка времени срабатывания предупреждения</string>
    <string name="set_alarm">Включить предупреждения  по времени</string>
    <string name="i_am_here">Я на месте</string>
    <string name="monday">ПН</string>
    <string name="tuesday">ВТ</string>
    <string name="wednesday">СР</string>
    <string name="thursday">ЧТ</string>
    <string name="saturday" >СБ</string>
    <string name="sunday">ВС</string>
    <string name="friday">ПТ</string>
    <string name="ok">Ок</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string-array name="templates">
        <item>Я на месте</item>
        <item>Я опаздываю</item>
    </string-array><string-array name="causes">
        <item>Без причины</item>
        <item>Пробка</item>
        <item>Проспал</item>
        <item>Другое</item>
    </string-array>
    <string-array name="hours">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
    <string-array name="minutes">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
    <string name="days_of_the_week">Дни срабатывания предупреждения</string>
    <string name="todo">TODO</string>
    <string name="cause">Причина</string>
    <string name="explanation">Пояснение</string>
    <string name="additionally">Дополнительно</string>
    <string name="back">Назад</string>
    <string name="on">Вкл</string>
    <string name="off">Выкл</string>
    <string name="set_notification">Поставить напоминание</string>
    <string name="accept_changes">Подтвердить изменения</string>
    <string name="alert">Внимание!</string>
    <string name="connection_error">Ошибка соединения</string>
    <string name="connection_error_message">Ошибка соединения с сервером. Проверьте наличие соединения с интернет</string>
    <string name="login">Логин</string>
    <string name="incorrect_data">Введены некорректные данные</string>
    <string name="are_you_sure_to_exit">Вы действительно хотите выйти из учётной записи?</string>
</resources>
